# screenwriter_editor

./: .gitignore  DOCX_EXPORT_README.md  FOUNTAIN_DOCX_EXPORT.md  Makefile  README.md  generate_sample_docx.dart  pubspec.yaml
android/: .gitignore  build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle
docs/: remote_sync_guide.md
example/: docx_export_example.dart
integration_test/: simple_test.dart
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: auth_utils.dart  docx_preview_page.dart  fountain_constants.dart  fountain_docx_exporter.dart  fountain_language.dart  fountain_parser.dart  isolate_socket_adapter_test_app.dart  isolate_socket_client.dart  isolate_socket_client_adapter.dart  isolate_socket_service.dart  isolate_socket_service_adapter.dart  isolate_socket_test.dart  isolate_socket_test_app.dart  location.dart  main.dart  socket_client.dart  socket_client_page.dart  socket_service.dart  socket_service_factory.dart  socket_settings_page.dart  statis.dart  stats_page.dart
lib/bridge_generated.dart/: frb_generated.dart  (+1 more)
linux/: CMakeLists.txt  my_application.cc
rust/: Cargo.toml
rust/src/: frb_generated.rs
rust/src/api/: docx_export.rs  mod.rs
rust_builder/: pubspec.yaml
rust_lib_screenwriter_editor.framework/: rust_lib_screenwriter_editor
test/: README.md  docx_export_test.dart  socket_integration_test.dart  socket_service_test.dart  widget_test.dart
tools/: README.md  pc_client_simulator.dart  run_socket_test.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
(+26 files in other folders)
