[package]
name = "rust_lib_screenwriter_editor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.10.0"
tokio = { version = "1", features = ["full"] }
betterfountain_rust = { git = "https://github.com/ArmingLou/betterfountain-rust.git" }
serde_json = "1.0"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
